tests/baselines/reference/scannerUnicodeEscapeInKeyword2.errors.txt
tests/cases/conformance/scanner/ecmascript5/file1.ts(3,5): error TS1260: Keywords cannot contain escape characters.
tests/cases/conformance/scanner/ecmascript5/file1.ts(8,5): error TS1260: Keywords cannot contain escape characters.
tests/cases/conformance/scanner/ecmascript5/file1.ts(13,1): error TS1260: Keywords cannot contain escape characters.
tests/cases/conformance/scanner/ecmascript5/file2.ts(1,1): error TS1260: Keywords cannot contain escape characters.
tests/cases/conformance/scanner/ecmascript5/file2.ts(5,5): error TS1260: Keywords cannot contain escape characters.
tests/cases/conformance/scanner/ecmascript5/file2.ts(10,5): error TS1260: Keywords cannot contain escape characters.
tests/cases/conformance/scanner/ecmascript5/file2.ts(15,1): error TS1260: Keywords cannot contain escape characters.


==== tests/cases/conformance/scanner/ecmascript5/file1.ts (3 errors) ====
    var \u0061wait = 12; // ok
    async function main() {
        \u0061wait 12; // not ok
        ~~~~~~~~~~
!!! error TS1260: Keywords cannot contain escape characters.
    }
    
    var \u0079ield = 12; // ok
    function *gen() {
        \u0079ield 12; //not ok
        ~~~~~~~~~~
!!! error TS1260: Keywords cannot contain escape characters.
    }
    
    type typ\u0065 = 12; // ok
    
    typ\u0065 notok = 0; // not ok
    ~~~~~~~~~
!!! error TS1260: Keywords cannot contain escape characters.
    
    export {};
==== tests/cases/conformance/scanner/ecmascript5/file2.ts (4 errors) ====
    \u{0076}ar x = "hello"; // not ok
    ~~~~~~~~~~
!!! error TS1260: Keywords cannot contain escape characters.
    
    var \u{0061}wait = 12; // ok
    async function main() {
        \u{0061}wait 12; // not ok
        ~~~~~~~~~~~~
!!! error TS1260: Keywords cannot contain escape characters.
    }
    
    var \u{0079}ield = 12; // ok
    function *gen() {
        \u{0079}ield 12; //not ok
        ~~~~~~~~~~~~
!!! error TS1260: Keywords cannot contain escape characters.
    }
    
    type typ\u{0065} = 12; // ok
    
    typ\u{0065} notok = 0; // not ok
    ~~~~~~~~~~~
!!! error TS1260: Keywords cannot contain escape characters.
    
    export {};
    
    const a = {def\u0061ult: 12}; // OK, `default` not in keyword position
    // chrome and jsc may still error on this, ref https://bugs.chromium.org/p/chromium/issues/detail?id=993000 and https://bugs.webkit.org/show_bug.cgi?id=200638
    